fix styles header nav li z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -79,6 +79,12 @@ section p {
     text-align: center;
 }
 
+@media (max-width: 800px){
+    section {
+        padding: 50px 20px;
+    }
+}
+
 /* header styles  */
 
 header {
@@ -110,6 +116,17 @@ header nav {
 
 header nav li {
     margin: 0 15px;
+    z-index: 1;
+}
+
+@media (max-width: 800px){
+    header {
+        padding: 20px 50px;
+        flex-direction: column;
+    }
+    header h2 {
+        margin-bottom: 15px;
+    }
 }
 
 /* hero styles */
@@ -160,6 +177,24 @@ header nav li {
     }
 }
 
+@media (max-width: 800px){
+    .hero {
+        min-height: 600px;
+    }
+
+    .hero h1 {
+        font-size: 48px;
+    }
+
+    .hero h3 {
+        font-size: 24px;
+    }
+
+    .hero a.btn {
+        padding: 15px 40px;
+    }
+}
+
 /* Destination Section  */
 
 .destinations .grid li {
@@ -176,6 +211,20 @@ header nav li {
 
 .destinations .grid li.large {
   flex-basis: 70%
+}
+
+@media (max-width: 1100px){
+    .destinations .grid li.small,
+    .destinations .grid li.large{
+        flex-basis: 50%;
+    }
+}
+
+@media (max-width: 800px){
+    .destinations .grid li.small,
+    .destinations .grid li.large{
+        flex-basis: 100%;
+    }
 }
 
 /* Packages Section  */
@@ -195,6 +244,13 @@ header nav li {
     margin: 25px 0px;
 }
 
+@media (max-width: 800px){
+    .packages .grid li {
+      flex-basis: 100%;
+      padding: 20px;
+    }
+}
+
 /* Testimonial Section */
 
 .testimonials .quote {
@@ -203,6 +259,18 @@ header nav li {
     line-height: 1.5;
     margin: 40px 0 25px;
 }
+
+@media (max-width: 800px){
+    .testimonials .quote {
+      font-size: 18px;
+      margin: 15px 0;
+    }
+    .testimonials .author {
+      font-size: 14px;
+    }
+}
+
+
 
 /* Contact Section */
 
@@ -223,6 +291,13 @@ header nav li {
     font-size: 18px;
     color: #555;
     flex: 1;
+}
+
+@media (max-width: 1000px){
+    .contact form input {
+      flex-basis: 100%;
+      margin: 0 0 20px 0;
+    }
 }
 
 /* Footer Section */
@@ -251,6 +326,19 @@ footer p {
     align-self: center;
 }
 
+@media (max-width: 1100px){
+    footer {
+      flex-direction: column;
+    }
+    footer p {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    footer ul li {
+      margin: 0 8px;
+    }
+}
 
 
 
